--- a/UnityHotUpdate/Packages/manifest.json
+++ b/UnityHotUpdate/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.code-philosophy.hybridclr": "https://gitee.com/focus-creative-games/hybridclr_unity.git",
     "com.unity.addressables": "1.21.21",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.feature.development": "1.0.1",
